# polar_patch

./: .gitignore  .prettierignore  .prettierrc.json  .vscodeignore  LICENSE  LazyFrame.py  MANIFEST.in  README.md  justfile  main.py  package.json  pnpm-lock.yaml  polar_patch.toml  polar_patch.vsix  polar_patch_lock.yaml  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py  taplo.toml  tsconfig.json  webpack.config.js
.github/: FUNDING.yml
config/: config.toml  schema.json
extension/: polar_patch_schema.json
modules/: __init__.py  ast_modifier.py  monkey_patcher.py  plugin_scanner.py  utils.py
polar_patch/: __cli__.py  __init__.py  __main__.py  _version.py  aggrid.py  ast_modifier.py  collector.py  merge_lockfiles.py  monkey_patcher.py  patcher.py  plugin_dep_resolver.py  plugin_scanner.py  scanner.py  test_func_form.py  test_func_form_classes.py  test_plugin.py  toml_schema.py  utils.py
polar_patch/ast/: collector.py  patcher.py  plugin_visitor.py  pp_transformer.py
polar_patch/ast/providers/: has_type_checking_block.py  polars_class_provider.py
polar_patch/models/: lockfile_entry.py  plugin.py
polar_patch/schemas/: toml_schema.py
polar_patch/templates/: plugin_imports.py.j2
schemas/: polar_patch_schema.json
src/: __cli__.py  __init__.py  monkey_patcher.py  plugin_scanner.py  polars_classes.py
tests/: __init__.py  test_ast_modifier.py  test_monkey_patcher.py  test_plugin_scanner.py  test_polars_plugin_collector.py
